# battlechain-lib-py

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
battlechain/: __init__.py  _boa.py  abi.py  builders.py  config.py  createx_chains.py  deploy.py  errors.py  query.py  safe_harbor.py  types.py  verify.py
tests/: test_deploy.py  test_smoke.py
tools/: gen_abi.py
