[project]
name = "battlechain-lib-py"
version = "0.3.0"
description = "Python library for deploying on BattleChain and adopting Safe Harbor agreements. Mirrors cyfrin/battlechain-lib (Solidity)."
authors = [
    { name = "PatrickAlphac", email = "54278053+PatrickAlphaC@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["battlechain", "safe-harbor", "ethereum", "moccasin", "boa"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "titanoboa>=0.2.5",
    "eth-utils>=4.1.1",
    "eth-abi>=5.0.0",
    "vyper>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Cyfrin/battlechain-lib-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["battlechain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[tool.uv]
managed = true
package = true
